tests/errors/unused_binding_extra.rs
use set_builder::set;

fn main() {
    let _ = set! { (x, y) : x <- [1, 2, 3] };
}
